implement our own sqlite4clj repository